--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "### Short list of objectives\n",
     "\n",
-    "* Import pdf of Proposed Rule\n",
-    "* Query rule for baseline responses\n",
+    "* Import pdf of Proposed Rule XXXXXXX\n",
+    "* Query rule for baseline responses \n",
     "* Fine-tune embedding model, recheck responses\n",
     "* Summarize rule"
    ]
@@ -17,14 +17,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "!pip3 install llama-index==0.10.68 llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -34,7 +29,8 @@
    "source": [
     "# Set up ollama\n",
     "!apt-get update && apt-get install tmux vim -y\n",
-    "!pip3 install openai python-dotenv llama-index llama-index-llms-openai llama-index-llms-ollama llama-index-embeddings-ollama\n",
+    "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai\n",
+    "!pip3 install sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv graspologic\n",
     "!pip3 install flash-attn --no-build-isolation\n",
     "!curl -fsSL https://ollama.com/install.sh | sh\n",
     "\n",
@@ -49,7 +45,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up Neo4j"
+    "# Set up Neo4j\n",
+    "!apt install dialog apt-utils -y \n",
+    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
+    "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
+    "!apt list -a neo4j\n",
+    "!add-apt-repository universe -y\n",
+    "!apt install neo4j=1:5.22.0 -y\n",
+    "!echo \"neo4j-enterprise neo4j/question select I ACCEPT\" | debconf-set-selections\n",
+    "!echo \"neo4j-enterprise neo4j/license note\" | debconf-set-selections\n",
+    "!apt install openjdk-17-jre -y\n",
+    "!cd /var/lib/neo4j/plugins/ && wget https://github.com/neo4j/apoc/releases/download/5.22.0/apoc-5.22.0-core.jar\n"
    ]
   },
   {
@@ -58,16 +64,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import subprocess\n",
+    "import subprocess, os\n",
     "from llama_index.core import Settings\n",
     "from llama_index.llms.ollama import Ollama\n",
     "from llama_index.llms.openai import OpenAI as LOpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
     "\n",
     "# model_name, ctx_len = \"gpt-4o\", 128000\n",
     "# model_name, ctx_len = \"llama3.1:latest\", 128000\n",
     "model_name, ctx_len = \"hermes3:8b\", 128000\n",
+    "# model_name, ctx_len = \"gemma2:27b\", 8192\n",
+    "\n",
     "\n",
     "if model_name == \"gpt-4o\":\n",
+    "    openai_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "    os.environ[\"OPENAI_API_KEY\"] = openai_key\n",
+    "    \n",
+    "    print(f\"Using OpenAI {model_name}...\")\n",
     "    llm = LOpenAI(model=model_name, max_tokens=4000)\n",
     "else:\n",
     "    try: \n",
@@ -86,190 +100,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip3 install llama-index==0.10.67.post1 llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning\n",
-    "!pip3 install sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv graspologic\n",
-    "!pip3 install flash-attn --no-build-isolation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No sentence-transformers model found with name GritLM/GritLM-7B. Creating a new one with MEAN pooling.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading embed model...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afeda33ec6014651a76c31dbae234552",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/946 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e425b24639d4d048094d7b8fc0cb0aa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors.index.json:   0%|          | 0.00/23.9k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcdc12d3d1ee42fdbb223f7a31cd993c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading shards:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "683b5e181fd1447c8f28883707aa0785",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00001-of-00003.safetensors:   0%|          | 0.00/4.94G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8037b77a84584be19492e4fb497c44d6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00002-of-00003.safetensors:   0%|          | 0.00/5.00G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64c391e32b4c462ea33c1a47394b5d2e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00003-of-00003.safetensors:   0%|          | 0.00/4.54G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f029d505e4294b30bcd7dba9a77180b6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d6c8f3702374b6cb2689dd7c76ad622",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/1.35k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98d49655604a408d841292da2812470f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.model:   0%|          | 0.00/493k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2991fb4c2271494eab3da2514b204a47",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/1.80M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "187cfb4633214ef89721a1b0cee7bc60",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/436 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
     "\n",
     "import os\n",
@@ -305,10 +137,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# SEC rules and regulations\n",
     "!cd /workspace/data && curl -X GET \"https://www.ecfr.gov/api/versioner/v1/full/2024-07-23/title-17.xml?chapter=II\" -H \"accept: application/xml\" > title-17.xml"
@@ -355,77 +185,108 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from llamaindex_data_utils import extract_text_from_pdf\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
+    "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "access_token = os.getenv('HF_TOKEN')\n",
+    "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
+    "\n",
+    "pdf_urls = [\"/workspace/data/FSI_Factsheet.pdf\", \"/workspace/data/FSI_Press_Release.pdf\", \"/workspace/data/FSI_Rule_proposal.pdf\"]\n",
+    "descriptions = [\"Factsheet about newly proposed SEC rule.\", \"Press release regarding newly proposed SEC rule.\", \"The full text of the newly proposed SEC rule.\"]\n",
+    "documents = extract_text_from_pdf(pdf_urls, llama_api_key, llamaparse_kwargs={\"split_by_page\":False}, save_json_path=None)\n",
+    "# add metadata to the documents\n",
+    "for i in range(len(documents)):\n",
+    "    documents[i].metadata[\"source\"] = pdf_urls[i]\n",
+    "    documents[i].metadata[\"description\"] = descriptions[i]\n",
+    "    \n",
+    "# documents.extend(docs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Datasets"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from llama_index.core.node_parser import SentenceSplitter\n",
+    "\n",
+    "parser = SentenceSplitter(chunk_size=300, chunk_overlap=50)\n",
+    "nodes = parser.get_nodes_from_documents(documents, show_progress=True)\n",
+    "len(nodes)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "system_prompt = \"\"\"Context information is below.\\n\\n---------------------\\n{context_str}\\n---------------------\\n\\nGiven the context information and no prior knowledge, generate {num_questions_per_chunk} questions based on the below query.\\n\\nYou are a FINRA certified Compliance Specialist that writes exams for firm compliance professionals. Your task is to setup {num_questions_per_chunk} questions for an upcoming Compliance Officer certification examination. The questions should be diverse across the context, exact in wording, with no multiple choice. Restrict the questions to the context information provided. Only return the question.\\n\"\"\"\n",
+    "\n",
+    "# system_prompt = \"\"\"Context information is below.\\n\\n---------------------\\n{context_str}\\n---------------------\\n\\nGiven the context information and no prior knowledge, generate {num_questions_per_chunk} questions based on the below query.\\n\\nYou are a FINRA certified Compliance Specialist that writes exams for firm compliance professionals. Your task is to setup {num_questions_per_chunk} questions for an upcoming Compliance Officer certification examination. The questions should be diverse across the context, exact in wording, with no multiple choice. It is very important to reference other sections or acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) in the context. Restrict the questions to the context information provided. Only return the question.\\n\"\"\"\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from llama_index.finetuning import generate_qa_embedding_pairs\n",
+    "from llama_index.core.evaluation import EmbeddingQAFinetuneDataset\n",
+    "from llama_index.llms.openai import OpenAI\n",
+    "import random\n",
+    "\n",
+    "rand_index = random.sample(range(len(nodes)), len(nodes))\n",
+    "train_perc=1.0\n",
+    "train_size = int(len(rand_index)*train_perc)\n",
+    "\n",
+    "output_path = \"/workspace/data/train_dataset_proposal.json\"\n",
+    "train_dataset = generate_qa_embedding_pairs(\n",
+    "    qa_generate_prompt_tmpl = system_prompt,\n",
+    "    num_questions_per_chunk=5,\n",
+    "    save_every=20,\n",
+    "    output_path=output_path,\n",
+    "    llm=llm, \n",
+    "    nodes=[nodes[x] for x in rand_index[:train_size]],\n",
+    "    verbose=False\n",
+    ")\n",
+    "train_dataset.save_json(output_path)\n",
+    "\n",
+    "# val_dataset = generate_qa_embedding_pairs(\n",
+    "#     qa_generate_prompt_tmpl = system_prompt,\n",
+    "#     num_questions_per_chunk=5,\n",
+    "#     save_every=500,\n",
+    "#     output_path=\"/workspace/data/val_dataset.json\",\n",
+    "#     llm=llm, \n",
+    "#     nodes=[nodes[x] for x in rand_index[train_size:]],\n",
+    "#     verbose=False\n",
+    "# )\n",
+    "# # assert len(val_dataset.relevant_docs) == len(val_dataset.queries)\n",
+    "# assert (np.unique(list(val_dataset.relevant_docs.values()), return_counts=True)[1]==5).all()\n",
+    "# val_dataset.save_json(\"/workspace/data/val_dataset.json\")\n",
+    "\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Pretrain Embeddings"
+   ]
   },
   {
    "cell_type": "code",
