--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install llama-index==0.10.68 llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai\n"
+    "!pip3 install llama-index==0.10.68 llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai \n"
    ]
   },
   {
@@ -29,14 +29,10 @@
    "source": [
     "# Set up ollama\n",
     "!apt-get update && apt-get install tmux vim -y\n",
-    "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai\n",
+    "# !pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai\n",
     "!pip3 install sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv graspologic\n",
     "!pip3 install flash-attn --no-build-isolation\n",
-    "!curl -fsSL https://ollama.com/install.sh | sh\n",
-    "\n",
-    "# !chmod +x /usr/bin/ollama\n",
-    "# !useradd -r -s /bin/false -m -d /usr/share/ollama ollama\n",
-    "# !pip3 install openpyxl sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv dspy-ai graspologic\n"
+    "!curl -fsSL https://ollama.com/install.sh | sh\n"
    ]
   },
   {
@@ -97,36 +93,6 @@
     "    print(llm.metadata)\n",
     "\n",
     "Settings.llm = llm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "import os\n",
-    "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
-    "from llama_index.core import Settings\n",
-    "\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
-    "\n",
-    "import nest_asyncio\n",
-    "nest_asyncio.apply()\n",
-    "\n",
-    "access_token = os.getenv('HF_TOKEN')\n",
-    "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
-    "\n",
-    "Settings.chunk_size = 500\n",
-    "Settings.chunk_overlap = 50\n",
-    "embed_model_name = \"GritLM/GritLM-7B\" #7b params\n",
-    "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
-    "# embed_model_name = \"hkunlp/instructor-base\"\n",
-    "print(\"loading embed model...\")\n",
-    "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
-    "# embed_model = InstructorEmbedding(model_name=embed_model_name)\n",
-    "\n",
-    "Settings.embed_model = embed_model\n"
    ]
   },
   {
@@ -234,9 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_prompt = \"\"\"Context information is below.\\n\\n---------------------\\n{context_str}\\n---------------------\\n\\nGiven the context information and no prior knowledge, generate {num_questions_per_chunk} questions based on the below query.\\n\\nYou are a FINRA certified Compliance Specialist that writes exams for firm compliance professionals. Your task is to setup {num_questions_per_chunk} questions for an upcoming Compliance Officer certification examination. The questions should be diverse across the context, exact in wording, with no multiple choice. Restrict the questions to the context information provided. Only return the question.\\n\"\"\"\n",
-    "\n",
-    "# system_prompt = \"\"\"Context information is below.\\n\\n---------------------\\n{context_str}\\n---------------------\\n\\nGiven the context information and no prior knowledge, generate {num_questions_per_chunk} questions based on the below query.\\n\\nYou are a FINRA certified Compliance Specialist that writes exams for firm compliance professionals. Your task is to setup {num_questions_per_chunk} questions for an upcoming Compliance Officer certification examination. The questions should be diverse across the context, exact in wording, with no multiple choice. It is very important to reference other sections or acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) in the context. Restrict the questions to the context information provided. Only return the question.\\n\"\"\"\n"
+    "system_prompt = \"\"\"Context information is below.\\n\\n---------------------\\n{context_str}\\n---------------------\\n\\nGiven the context information and no prior knowledge, generate {num_questions_per_chunk} questions based on the below query.\\n\\nYou are a FINRA certified Compliance Specialist that writes exams for firm compliance professionals. Your task is to setup {num_questions_per_chunk} questions for an upcoming Compliance Officer certification examination. The questions should be diverse across the context, exact in wording, with no multiple choice. Restrict the questions to the context information provided. Only return the question.\\n\"\"\""
    ]
   },
   {
@@ -293,7 +257,177 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "#####################\n",
+    "# in llama_index/embeddings/huggingface/base need to add \"show_progress_bar=False\" to 204, 213\n",
+    "#####################\n",
+    "\n",
+    "import os, json\n",
+    "\n",
+    "from llama_index.finetuning import EmbeddingAdapterFinetuneEngine, SentenceTransformersFinetuneEngine\n",
+    "from llama_index.core.evaluation import EmbeddingQAFinetuneDataset\n",
+    "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
+    "from llama_index.core import Settings\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
+    "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "train_path = \"/workspace/data/train_dataset_proposal.json\"\n",
+    "# val_path = \"/workspace/data/val_dataset.json\"\n",
+    "if os.path.exists(train_path):\n",
+    "    train_dataset = EmbeddingQAFinetuneDataset.from_json(train_path)\n",
+    "# if os.path.exists(val_path):\n",
+    "#     val_dataset = EmbeddingQAFinetuneDataset.from_json(val_path)\n",
+    "\n",
+    "access_token = os.getenv('HF_TOKEN')\n",
+    "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
+    "\n",
+    "embed_model_name = \"dunzhang/stella_en_1.5B_v5\" #7b params\n",
+    "# embed_model_name = \"Alibaba-NLP/gte-Qwen2-1.5B-instruct\"\n",
+    "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
+    "print(\"loading embed model...\")\n",
+    "# base_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
+    "\n",
+    "# Settings.embed_model = base_embed_model\n",
+    "\n",
+    "finetune_engine = SentenceTransformersFinetuneEngine(\n",
+    "    train_dataset,\n",
+    "    embed_model_name,\n",
+    "    batch_size=6,\n",
+    "    model_output_path=\"/workspace/data/rule_proposal_embedding_model\",\n",
+    "    # val_dataset=val_dataset,\n",
+    "    epochs=2,\n",
+    "    show_progress_bar=True,\n",
+    "    # can optionally pass along any parameters that go into `train_model`\n",
+    "    # optimizer_class=torch.optim.SGD,\n",
+    "    # optimizer_params={\"lr\": 0.0001, \"weight_decay\": 0.01}\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# finetune_engine = EmbeddingAdapterFinetuneEngine(\n",
+    "#     train_dataset,\n",
+    "#     base_embed_model,\n",
+    "#     batch_size=10,\n",
+    "#     model_output_path=\"/workspace/data/adapter_model\",\n",
+    "#     # val_dataset=val_dataset,\n",
+    "#     epochs=4,\n",
+    "#     verbose=False,\n",
+    "#     # can optionally pass along any parameters that go into `train_model`\n",
+    "#     # optimizer_class=torch.optim.SGD,\n",
+    "#     # optimizer_params={\"lr\": 0.001}\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finetune_engine.finetune()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Embedding Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import os\n",
+    "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
+    "from llama_index.core import Settings\n",
+    "\n",
+    "\n",
+    "embed_model_name = \"/workspace/data/rule_proposal_embedding_model\"\n",
+    "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
+    "# embed_model_name = \"hkunlp/instructor-base\"\n",
+    "print(\"loading embed model...\")\n",
+    "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
+    "# embed_model = InstructorEmbedding(model_name=embed_model_name)\n",
+    "\n",
+    "Settings.embed_model = embed_model\n",
+    "Settings.chunk_size = 300\n",
+    "Settings.chunk_overlap = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Literal\n",
+    "\n",
+    "entities = Literal[\"PROPOSED_RULE\", \n",
+    "                   \"ACTS\",\n",
+    "                   \"SECTIONS\",\n",
+    "                   \"AMENDMENTS\"\n",
+    "]\n",
+    "\n",
+    "relations = Literal[\n",
+    "    \"REFERS_TO\",\n",
+    "    \"CHANGES\",\n",
+    "    \"AMENDS\"\n",
+    "]\n",
+    "\n",
+    "validation_schema = {\n",
+    "    \"Proposed_Rules\": [\"CHANGES\", \"AMENDS\"],\n",
+    "    \"Acts\": [\"REFERS_TO\"],\n",
+    "    \"Sections\": [\"REFERS_TO\"],\n",
+    "    \"Amendments\": [\"REFERS_TO\", \"AMENDS\"],\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from rag_utils import set_neo4j_password, add_lines_to_conf\n",
+    "set_neo4j_password('bewaretheneo')\n",
+    "add_lines_to_conf()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor\n",
+    "from rag_utils import create_neo4j_graph_store, create_neo4j_graphrag, neo4j_query\n",
+    "\n",
+    "\n",
+    "kg_extractor = SchemaLLMPathExtractor(\n",
+    "    llm=llm,\n",
+    "    possible_entities=entities,\n",
+    "    possible_relations=relations,\n",
+    "    kg_validation_schema=validation_schema,\n",
+    "    strict=False,  # if false, will allow triples outside of the schema``\n",
+    "    num_workers=6,\n",
+    "    max_triplets_per_chunk=10,\n",
+    ")\n",
+    "\n",
+    "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
+    "                                       password=os.getenv(\"NEO4J_PWD\"), \n",
+    "                                       config={\"connection_timeout\": 240, \"connection_acquisition_timeout\": 240, \"max_connection_pool_size\": 1000})\n",
+    "neo4j_query(graph_store, query=\"\"\"MATCH (n) DETACH DELETE n\"\"\")\n",
+    "\n",
+    "graph_index = create_neo4j_graphrag(documents, llm, embed_model, kg_extractor, graph_store)"
+   ]
   },
   {
    "cell_type": "code",
@@ -304,59 +438,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from llama_index.core.tools import QueryEngineTool, ToolMetadata\n",
+    "\n",
+    "query_engine_tools = QueryEngineTool(\n",
+    "            query_engine=graph_index,\n",
+    "            metadata=ToolMetadata(\n",
+    "                name=\"proposed_rule_graphrag_tool\",\n",
+    "                description=(\n",
+    "                    \"Contains all the information of the newly proposed SEC rule.\"\n",
+    "                ),\n",
+    "            ),\n",
+    "        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_tools = [query_engine_tools]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_agents import (\n",
+    "    AgentService,\n",
+    "    ToolService,\n",
+    "    MetaServiceTool,\n",
+    "    ControlPlaneServer,\n",
+    "    SimpleMessageQueue,\n",
+    "    AgentOrchestrator,\n",
+    ")\n",
+    "\n",
+    "from llama_index.core.agent import FunctionCallingAgentWorker\n",
+    "from llama_index.core.agent import ReActAgentWorker, ReActAgent\n",
+    "\n",
+    "\n",
+    "\n",
+    "# create our multi-agent framework components\n",
+    "message_queue = SimpleMessageQueue()\n",
+    "control_plane = ControlPlaneServer(\n",
+    "    message_queue=message_queue,\n",
+    "    orchestrator=AgentOrchestrator(llm=llm),\n",
+    ")\n",
+    "\n",
+    "# define Tool Service\n",
+    "tool_service = ToolService(\n",
+    "    message_queue=message_queue,\n",
+    "    tools=all_tools,\n",
+    "    running=True,\n",
+    "    step_interval=0.5,\n",
+    ")\n",
+    "\n",
+    "# define meta-tools here\n",
+    "meta_tools = [\n",
+    "    await MetaServiceTool.from_tool_service(\n",
+    "        t.metadata.name,\n",
+    "        message_queue=message_queue,\n",
+    "        tool_service=tool_service,\n",
+    "    )\n",
+    "    for t in all_tools\n",
+    "]\n",
+    "\n",
+    "\n",
+    "# define Agent and agent service\n",
+    "# worker1 = FunctionCallingAgentWorker.from_tools(\n",
+    "worker1 = ReActAgentWorker.from_tools(\n",
+    "    meta_tools,\n",
+    "    llm=llm,\n",
+    ")\n",
+    "agent1 = worker1.as_agent()\n",
+    "agent_server_1 = AgentService(\n",
+    "    agent=agent1,\n",
+    "    message_queue=message_queue,\n",
+    "    description=\"Agent that answers questions based on the newly proposed SEC rule.\",\n",
+    "    service_name=\"rule_proposal_agent\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent_server_1."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "response = agent1.chat('When are written comments on this notice of joint proposed rulemaking need to be submitted?')\n",
+    "print(response.response)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# questions\n",
+    "# Name of rule \n",
+    "# Is it a proposed rule or a final rule\n",
+    "# Issue date and Federal Register date\n",
+    "# What agency(ies) is the Rule coming from\n",
+    "# If a proposed rule, when are public comments due by and where should they be sent (this info is in the Rule document under Dates and Addresses)"
+   ]
   },
   {
    "cell_type": "code",
