regular rag working well

--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install llama-index==0.10.68 llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai \n"
+    "!pip3 install llama-index==0.10.68 llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai\n"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "!echo \"neo4j-enterprise neo4j/question select I ACCEPT\" | debconf-set-selections\n",
     "!echo \"neo4j-enterprise neo4j/license note\" | debconf-set-selections\n",
     "!apt install openjdk-17-jre -y\n",
-    "!cd /var/lib/neo4j/plugins/ && wget https://github.com/neo4j/apoc/releases/download/5.22.0/apoc-5.22.0-core.jar\n"
+    "!cd /var/lib/neo4j/plugins/ && wget https://github.com/neo4j/apoc/releases/download/5.22.0/apoc-5.22.0-core.jar"
    ]
   },
   {
@@ -88,8 +88,8 @@
     "    \n",
     "    addtion_kwargs = {\"max_new_tokens\": 4000}\n",
     "    # system_prompt = \"You are an expert at answering questions about rules and regulations regarding Title 17—Commodity and Securities Exchanges: CHAPTER II—SECURITIES AND EXCHANGE COMMISSION. Please provide a summary of the following text, and cite any sections, rules, acts or laws (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) from context that support the answer. Be detailed in your response.\"\n",
-    "    llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=ctx_len, model_type=\"chat\", is_function_calling_model=False, \n",
-    "                request_timeout=1000.0, additional_kwargs=addtion_kwargs) # system_prompt=system_prompt\n",
+    "    llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=ctx_len, model_type=\"chat\", is_function_calling_model=True, \n",
+    "                 request_timeout=1000.0, additional_kwargs=addtion_kwargs) #, system_prompt=system_prompt)\n",
     "    print(llm.metadata)\n",
     "\n",
     "Settings.llm = llm"
@@ -353,11 +353,8 @@
     "\n",
     "\n",
     "embed_model_name = \"/workspace/data/rule_proposal_embedding_model\"\n",
-    "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
-    "# embed_model_name = \"hkunlp/instructor-base\"\n",
     "print(\"loading embed model...\")\n",
     "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
-    "# embed_model = InstructorEmbedding(model_name=embed_model_name)\n",
     "\n",
     "Settings.embed_model = embed_model\n",
     "Settings.chunk_size = 300\n",
@@ -393,12 +390,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from rag_utils import set_neo4j_password, add_lines_to_conf\n",
     "set_neo4j_password('bewaretheneo')\n",
-    "add_lines_to_conf()\n"
+    "add_lines_to_conf()\n",
+    "\n",
+    "###### START NEO4J SERVER ######\n"
    ]
   },
   {
@@ -407,6 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# GraphRAG Database\n",
     "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor\n",
     "from rag_utils import create_neo4j_graph_store, create_neo4j_graphrag, neo4j_query\n",
     "\n",
@@ -418,12 +420,13 @@
     "    kg_validation_schema=validation_schema,\n",
     "    strict=False,  # if false, will allow triples outside of the schema``\n",
     "    num_workers=6,\n",
-    "    max_triplets_per_chunk=10,\n",
+    "    max_triplets_per_chunk=15,\n",
     ")\n",
     "\n",
     "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
     "                                       password=os.getenv(\"NEO4J_PWD\"), \n",
     "                                       config={\"connection_timeout\": 240, \"connection_acquisition_timeout\": 240, \"max_connection_pool_size\": 1000})\n",
+    "\n",
     "neo4j_query(graph_store, query=\"\"\"MATCH (n) DETACH DELETE n\"\"\")\n",
     "\n",
     "graph_index = create_neo4j_graphrag(documents, llm, embed_model, kg_extractor, graph_store)"
@@ -434,7 +437,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Vector Database RAG\n",
+    "from llama_index.core.postprocessor import LLMRerank\n",
+    "from rag_utils import create_llama_vector_index_rag\n",
+    "\n",
+    "vector_index = create_llama_vector_index_rag(llm, embed_model, documents=documents)\n",
+    "query_engine = vector_index.as_query_engine(\n",
+    "    similarity_top_k=5,\n",
+    "    node_postprocessors=[\n",
+    "        LLMRerank(\n",
+    "            choice_batch_size=5,\n",
+    "            top_n=2,\n",
+    "        )\n",
+    "    ],\n",
+    "    # see https://github.com/run-llama/llama_index/blob/f7c5ee5efbb6172e819f26d1705fcdf6114b11a3/llama-index-core/llama_index/core/response_synthesizers/type.py#L4\n",
+    "    response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# questions\n",
+    "# Name of rule \n",
+    "# Is it a proposed rule or a final rule\n",
+    "# Issue date and Federal Register date\n",
+    "# What agency(ies) is the Rule coming from\n",
+    "# If a proposed rule, when are public comments due by and where should they be sent (this info is in the Rule document under Dates and Addresses)\n",
+    "\n",
+    "response = query_engine.query(\"If a proposed rule, when are public comments due by and where should they be sent?\")\n",
+    "print(response.response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tree\n",
+    "print(response.response)"
+   ]
   },
   {
    "cell_type": "code",
