--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -103,8 +103,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# SEC rules and regulations\n",
     "!cd /workspace/data && curl -X GET \"https://www.ecfr.gov/api/versioner/v1/full/2024-07-23/title-17.xml?chapter=II\" -H \"accept: application/xml\" > title-17.xml"
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,13 +167,13 @@
     "\n",
     "pdf_urls = [\"/workspace/data/FSI_Factsheet.pdf\", \"/workspace/data/FSI_Press_Release.pdf\", \"/workspace/data/FSI_Rule_proposal.pdf\"]\n",
     "descriptions = [\"Factsheet about newly proposed SEC rule.\", \"Press release regarding newly proposed SEC rule.\", \"The full text of the newly proposed SEC rule.\"]\n",
-    "documents = extract_text_from_pdf(pdf_urls, llama_api_key, llamaparse_kwargs={\"split_by_page\":False}, save_json_path=None)\n",
-    "# add metadata to the documents\n",
-    "for i in range(len(documents)):\n",
-    "    documents[i].metadata[\"source\"] = pdf_urls[i]\n",
-    "    documents[i].metadata[\"description\"] = descriptions[i]\n",
+    "documents_proposal = extract_text_from_pdf(pdf_urls, llama_api_key, llamaparse_kwargs={\"split_by_page\":False}, save_json_path=None)\n",
+    "# add metadata to the documents_proposal\n",
+    "for i in range(len(documents_proposal)):\n",
+    "    documents_proposal[i].metadata[\"source\"] = pdf_urls[i]\n",
+    "    documents_proposal[i].metadata[\"description\"] = descriptions[i]\n",
     "    \n",
-    "# documents.extend(docs)"
+    "# documents_proposal.extend(docs)"
    ]
   },
   {
@@ -190,7 +192,7 @@
     "from llama_index.core.node_parser import SentenceSplitter\n",
     "\n",
     "parser = SentenceSplitter(chunk_size=300, chunk_overlap=50)\n",
-    "nodes = parser.get_nodes_from_documents(documents, show_progress=True)\n",
+    "nodes = parser.get_nodes_from_documents(documents_proposal, show_progress=True)\n",
     "len(nodes)"
    ]
   },
@@ -214,34 +216,35 @@
     "from llama_index.llms.openai import OpenAI\n",
     "import random\n",
     "\n",
-    "rand_index = random.sample(range(len(nodes)), len(nodes))\n",
-    "train_perc=1.0\n",
-    "train_size = int(len(rand_index)*train_perc)\n",
-    "\n",
     "output_path = \"/workspace/data/train_dataset_proposal.json\"\n",
-    "train_dataset = generate_qa_embedding_pairs(\n",
-    "    qa_generate_prompt_tmpl = system_prompt,\n",
-    "    num_questions_per_chunk=5,\n",
-    "    save_every=20,\n",
-    "    output_path=output_path,\n",
-    "    llm=llm, \n",
-    "    nodes=[nodes[x] for x in rand_index[:train_size]],\n",
-    "    verbose=False\n",
-    ")\n",
-    "train_dataset.save_json(output_path)\n",
+    "if not os.path.exists(output_path):\n",
+    "    rand_index = random.sample(range(len(nodes)), len(nodes))\n",
+    "    train_perc=1.0\n",
+    "    train_size = int(len(rand_index)*train_perc)\n",
     "\n",
-    "# val_dataset = generate_qa_embedding_pairs(\n",
-    "#     qa_generate_prompt_tmpl = system_prompt,\n",
-    "#     num_questions_per_chunk=5,\n",
-    "#     save_every=500,\n",
-    "#     output_path=\"/workspace/data/val_dataset.json\",\n",
-    "#     llm=llm, \n",
-    "#     nodes=[nodes[x] for x in rand_index[train_size:]],\n",
-    "#     verbose=False\n",
-    "# )\n",
-    "# # assert len(val_dataset.relevant_docs) == len(val_dataset.queries)\n",
-    "# assert (np.unique(list(val_dataset.relevant_docs.values()), return_counts=True)[1]==5).all()\n",
-    "# val_dataset.save_json(\"/workspace/data/val_dataset.json\")\n",
+    "    train_dataset = generate_qa_embedding_pairs(\n",
+    "        qa_generate_prompt_tmpl = system_prompt,\n",
+    "        num_questions_per_chunk=5,\n",
+    "        save_every=20,\n",
+    "        output_path=output_path,\n",
+    "        llm=llm, \n",
+    "        nodes=[nodes[x] for x in rand_index[:train_size]],\n",
+    "        verbose=False\n",
+    "    )\n",
+    "    train_dataset.save_json(output_path)\n",
+    "\n",
+    "    # val_dataset = generate_qa_embedding_pairs(\n",
+    "    #     qa_generate_prompt_tmpl = system_prompt,\n",
+    "    #     num_questions_per_chunk=5,\n",
+    "    #     save_every=500,\n",
+    "    #     output_path=\"/workspace/data/val_dataset.json\",\n",
+    "    #     llm=llm, \n",
+    "    #     nodes=[nodes[x] for x in rand_index[train_size:]],\n",
+    "    #     verbose=False\n",
+    "    # )\n",
+    "    # # assert len(val_dataset.relevant_docs) == len(val_dataset.queries)\n",
+    "    # assert (np.unique(list(val_dataset.relevant_docs.values()), return_counts=True)[1]==5).all()\n",
+    "    # val_dataset.save_json(\"/workspace/data/val_dataset.json\")\n",
     "\n"
    ]
   },
@@ -272,37 +275,26 @@
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
     "from llama_index.core import Settings\n",
     "\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
-    "\n",
-    "import nest_asyncio\n",
-    "nest_asyncio.apply()\n",
     "\n",
     "train_path = \"/workspace/data/train_dataset_proposal.json\"\n",
-    "# val_path = \"/workspace/data/val_dataset.json\"\n",
+    "val_path = None #\"/workspace/data/val_dataset.json\"\n",
     "if os.path.exists(train_path):\n",
     "    train_dataset = EmbeddingQAFinetuneDataset.from_json(train_path)\n",
-    "# if os.path.exists(val_path):\n",
-    "#     val_dataset = EmbeddingQAFinetuneDataset.from_json(val_path)\n",
-    "\n",
-    "access_token = os.getenv('HF_TOKEN')\n",
-    "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
+    "if val_path is not None and os.path.exists(val_path):\n",
+    "    val_dataset = EmbeddingQAFinetuneDataset.from_json(val_path)\n",
+    "else:\n",
+    "    val_dataset = None\n",
     "\n",
     "embed_model_name = \"dunzhang/stella_en_1.5B_v5\" #7b params\n",
-    "# embed_model_name = \"Alibaba-NLP/gte-Qwen2-1.5B-instruct\"\n",
-    "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
     "print(\"loading embed model...\")\n",
-    "# base_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
-    "\n",
-    "# Settings.embed_model = base_embed_model\n",
     "\n",
     "finetune_engine = SentenceTransformersFinetuneEngine(\n",
     "    train_dataset,\n",
     "    embed_model_name,\n",
     "    batch_size=6,\n",
     "    model_output_path=\"/workspace/data/rule_proposal_embedding_model\",\n",
-    "    # val_dataset=val_dataset,\n",
-    "    epochs=2,\n",
+    "    val_dataset=val_dataset,\n",
+    "    epochs=3,\n",
     "    show_progress_bar=True,\n",
     "    # can optionally pass along any parameters that go into `train_model`\n",
     "    # optimizer_class=torch.optim.SGD,\n",
@@ -334,6 +326,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gc, torch\n",
+    "# Clear memory\n",
+    "del finetune_engine\n",
+    "gc.collect()\n",
+    "torch.cuda.empty_cache()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -351,19 +356,20 @@
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
     "from llama_index.core import Settings\n",
     "\n",
-    "\n",
-    "embed_model_name = \"/workspace/data/rule_proposal_embedding_model\"\n",
+    "embed_model_name = \"dunzhang/stella_en_1.5B_v5\" #7b params\n",
+    "finetuned_embed_model_name = \"/workspace/data/rule_proposal_embedding_model\"\n",
     "print(\"loading embed model...\")\n",
-    "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
+    "proposal_embed_model = HuggingFaceEmbedding(model_name=finetuned_embed_model_name)\n",
+    "rules_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
     "\n",
-    "Settings.embed_model = embed_model\n",
+    "# Settings.embed_model = embed_model\n",
     "Settings.chunk_size = 300\n",
     "Settings.chunk_overlap = 50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,19 +415,29 @@
    "outputs": [],
    "source": [
     "# GraphRAG Database\n",
-    "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor\n",
+    "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor, SimpleLLMPathExtractor\n",
     "from rag_utils import create_neo4j_graph_store, create_neo4j_graphrag, neo4j_query\n",
     "\n",
     "\n",
-    "kg_extractor = SchemaLLMPathExtractor(\n",
-    "    llm=llm,\n",
-    "    possible_entities=entities,\n",
-    "    possible_relations=relations,\n",
-    "    kg_validation_schema=validation_schema,\n",
-    "    strict=False,  # if false, will allow triples outside of the schema``\n",
-    "    num_workers=6,\n",
-    "    max_triplets_per_chunk=15,\n",
-    ")\n",
+    "# kg_extractor = SchemaLLMPathExtractor(\n",
+    "#     llm=llm,\n",
+    "#     possible_entities=entities,\n",
+    "#     possible_relations=relations,\n",
+    "#     kg_validation_schema=validation_schema,\n",
+    "#     strict=False,  # if false, will allow triples outside of the schema``\n",
+    "#     num_workers=6,\n",
+    "#     max_triplets_per_chunk=15,\n",
+    "# )\n",
+    "\n",
+    "kg_extractor = SimpleLLMPathExtractor(\n",
+    "        # extract_prompt=extract_prompt,\n",
+    "        llm=llm,\n",
+    "        max_paths_per_chunk=10,\n",
+    "        num_workers=10,\n",
+    "    )\n",
+    "\n",
+    "Settings.chunk_size = 500\n",
+    "Settings.chunk_overlap = 50\n",
     "\n",
     "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
     "                                       password=os.getenv(\"NEO4J_PWD\"), \n",
@@ -429,7 +445,7 @@
     "\n",
     "neo4j_query(graph_store, query=\"\"\"MATCH (n) DETACH DELETE n\"\"\")\n",
     "\n",
-    "graph_index = create_neo4j_graphrag(documents, llm, embed_model, kg_extractor, graph_store)"
+    "graph_index = create_neo4j_graphrag(documents, llm, rules_embed_model, kg_extractor, graph_store, graph_idx_persist_dir=\"/workspace/data/graph_idx\", graph_store_persist_dir=\"/workspace/data/graph_store\")"
    ]
   },
   {
@@ -442,15 +458,15 @@
     "from llama_index.core.postprocessor import LLMRerank\n",
     "from rag_utils import create_llama_vector_index_rag\n",
     "\n",
-    "vector_index = create_llama_vector_index_rag(llm, embed_model, documents=documents)\n",
+    "vector_index = create_llama_vector_index_rag(llm, proposal_embed_model, documents=documents)\n",
     "query_engine = vector_index.as_query_engine(\n",
     "    similarity_top_k=5,\n",
-    "    node_postprocessors=[\n",
-    "        LLMRerank(\n",
-    "            choice_batch_size=5,\n",
-    "            top_n=2,\n",
-    "        )\n",
-    "    ],\n",
+    "    # node_postprocessors=[\n",
+    "    #     LLMRerank(\n",
+    "    #         choice_batch_size=5,\n",
+    "    #         top_n=2,\n",
+    "    #     )\n",
+    "    # ],\n",
     "    # see https://github.com/run-llama/llama_index/blob/f7c5ee5efbb6172e819f26d1705fcdf6114b11a3/llama-index-core/llama_index/core/response_synthesizers/type.py#L4\n",
     "    response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
     ")"
@@ -884,8 +900,7 @@
     "    AgentOrchestrator,\n",
     ")\n",
     "\n",
-    "from llama_index.core.agent import FunctionCallingAgentWorker\n",
-    "from llama_index.core.agent import ReActAgentWorker, ReActAgent\n",
+    "from llama_index.core.agent import FunctionCallingAgentWorker, ReActAgentWorker, ReActAgent, LATSAgentWorker\n",
     "\n",
     "\n",
     "\n",
@@ -921,6 +936,15 @@
     "    meta_tools,\n",
     "    llm=llm,\n",
     ")\n",
+    "\n",
+    "worker2 = LATSAgentWorker.from_tools(\n",
+    "    meta_tools,\n",
+    "    llm=llm,\n",
+    "    num_expansions=2,\n",
+    "    max_rollouts=3,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
     "agent1 = worker1.as_agent()\n",
     "agent_server_1 = AgentService(\n",
     "    agent=agent1,\n",
