--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -18,7 +18,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install llama-index==0.10.68 llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai\n"
+    "!pip3 uninstall -y llama-agents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip3 install llama-index llama-parse llama_deploy llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning \n",
+    "\n",
+    "# llama-index-llms-azure-openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip3 install llama-index==0.10.68 llama-parse llama_deploy llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai"
    ]
   },
   {
@@ -29,7 +49,7 @@
    "source": [
     "# Set up ollama\n",
     "!apt-get update && apt-get install tmux vim -y\n",
-    "# !pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai\n",
+    "# !pip3 install llama-index llama-parse llama_deploy llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai\n",
     "!pip3 install sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv graspologic\n",
     "!pip3 install flash-attn --no-build-isolation\n",
     "!curl -fsSL https://ollama.com/install.sh | sh\n"
@@ -52,6 +72,16 @@
     "!echo \"neo4j-enterprise neo4j/license note\" | debconf-set-selections\n",
     "!apt install openjdk-17-jre -y\n",
     "!cd /var/lib/neo4j/plugins/ && wget https://github.com/neo4j/apoc/releases/download/5.22.0/apoc-5.22.0-core.jar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()"
    ]
   },
   {
@@ -114,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,9 +188,6 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
-    "\n",
-    "import nest_asyncio\n",
-    "nest_asyncio.apply()\n",
     "\n",
     "access_token = os.getenv('HF_TOKEN')\n",
     "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
@@ -322,18 +349,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "finetune_engine.finetune()"
+    "finetune_engine.finetune(**{\"lr\": 0.0001, \"weight_decay\": 0.01})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gc, torch\n",
+    "\n",
     "# Clear memory\n",
-    "del finetune_engine\n",
+    "del finetune_engine, train_dataset\n",
     "gc.collect()\n",
     "torch.cuda.empty_cache()"
    ]
@@ -359,12 +387,12 @@
     "embed_model_name = \"dunzhang/stella_en_1.5B_v5\" #7b params\n",
     "finetuned_embed_model_name = \"/workspace/data/rule_proposal_embedding_model\"\n",
     "print(\"loading embed model...\")\n",
-    "proposal_embed_model = HuggingFaceEmbedding(model_name=finetuned_embed_model_name)\n",
+    "# proposal_embed_model = HuggingFaceEmbedding(model_name=finetuned_embed_model_name)\n",
     "rules_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
     "\n",
     "# Settings.embed_model = embed_model\n",
-    "Settings.chunk_size = 300\n",
-    "Settings.chunk_overlap = 50"
+    "# Settings.chunk_size = 300\n",
+    "# Settings.chunk_overlap = 50"
    ]
   },
   {
@@ -396,10 +424,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from rag_utils import set_neo4j_password, add_lines_to_conf\n",
     "set_neo4j_password('bewaretheneo')\n",
@@ -429,22 +455,26 @@
     "#     max_triplets_per_chunk=15,\n",
     "# )\n",
     "\n",
+    "Settings.chunk_size = 500\n",
+    "Settings.chunk_overlap = 50\n",
+    "\n",
+    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to read each section and link other sections, rules, and acts mentioned. What sections, rules, and acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are mentioned in the content? If there are no mentions, return an empty list.\"\n",
     "kg_extractor = SimpleLLMPathExtractor(\n",
-    "        # extract_prompt=extract_prompt,\n",
+    "        extract_prompt=extract_prompt,\n",
     "        llm=llm,\n",
     "        max_paths_per_chunk=10,\n",
     "        num_workers=10,\n",
     "    )\n",
     "\n",
-    "Settings.chunk_size = 500\n",
-    "Settings.chunk_overlap = 50\n",
-    "\n",
+    "print(\"Creating graph store...\")\n",
     "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
     "                                       password=os.getenv(\"NEO4J_PWD\"), \n",
     "                                       config={\"connection_timeout\": 240, \"connection_acquisition_timeout\": 240, \"max_connection_pool_size\": 1000})\n",
     "\n",
+    "print(\"Deleting all nodes and relationships...\")\n",
     "neo4j_query(graph_store, query=\"\"\"MATCH (n) DETACH DELETE n\"\"\")\n",
     "\n",
+    "print(\"Creating graphrag index...\")\n",
     "graph_index = create_neo4j_graphrag(documents, llm, rules_embed_model, kg_extractor, graph_store, graph_idx_persist_dir=\"/workspace/data/graph_idx\", graph_store_persist_dir=\"/workspace/data/graph_store\")"
    ]
   },
@@ -458,7 +488,20 @@
     "from llama_index.core.postprocessor import LLMRerank\n",
     "from rag_utils import create_llama_vector_index_rag\n",
     "\n",
-    "vector_index = create_llama_vector_index_rag(llm, proposal_embed_model, documents=documents)\n",
+    "vector_index = create_llama_vector_index_rag(llm, proposal_embed_model, documents=documents_proposal)\n",
+    "query_engine = vector_index.as_query_engine(\n",
+    "    similarity_top_k=5,\n",
+    "    # node_postprocessors=[\n",
+    "    #     LLMRerank(\n",
+    "    #         choice_batch_size=5,\n",
+    "    #         top_n=2,\n",
+    "    #     )\n",
+    "    # ],\n",
+    "    # see https://github.com/run-llama/llama_index/blob/f7c5ee5efbb6172e819f26d1705fcdf6114b11a3/llama-index-core/llama_index/core/response_synthesizers/type.py#L4\n",
+    "    response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
+    ")\n",
+    "\n",
+    "vector_index = create_llama_vector_index_rag(llm, rules_embed_model, documents=documents)\n",
     "query_engine = vector_index.as_query_engine(\n",
     "    similarity_top_k=5,\n",
     "    # node_postprocessors=[\n",
@@ -586,15 +629,6 @@
     "    description=\"Agent that answers questions based on the newly proposed SEC rule.\",\n",
     "    service_name=\"rule_proposal_agent\",\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agent_server_1."
    ]
   },
   {
