--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_prompt = \"\"\"Context information is below.\\n\\n---------------------\\n{context_str}\\n---------------------\\n\\nGiven the context information and no prior knowledge, generate {num_questions_per_chunk} questions based on the below query.\\n\\nYou are a FINRA certified Compliance Specialist that writes exams for firm compliance professionals. Your task is to setup {num_questions_per_chunk} questions for an upcoming Compliance Officer certification examination. The questions should be diverse across the context, exact in wording, with no multiple choice. Restrict the questions to the context information provided. Only return the question.\\n\"\"\""
+    "system_prompt = 'Context information is below.\\n\\n---------------------\\n{context_str}\\n---------------------\\n\\nGiven the context information and no prior knowledge, generate {num_questions_per_chunk} questions based on the below query.\\n\\nYou are a FINRA certified Compliance Specialist that writes exams for firm compliance professionals. Your task is to write precise questions for an upcoming Compliance Officer certification examination. The questions should be diverse across the context with no multiple choice. Restrict the questions to the context information provided.\"\\n'"
    ]
   },
   {
@@ -378,29 +378,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Literal\n",
     "\n",
-    "entities = Literal[\"PROPOSED_RULE\", \n",
+    "entities = Literal[#\"PROPOSED_RULE\", \n",
     "                   \"ACTS\",\n",
     "                   \"SECTIONS\",\n",
-    "                   \"AMENDMENTS\"\n",
+    "                   #\"AMENDMENTS\"\n",
     "]\n",
     "\n",
     "relations = Literal[\n",
-    "    \"REFERS_TO\",\n",
-    "    \"CHANGES\",\n",
-    "    \"AMENDS\"\n",
+    "    # \"REFERS_TO\",\n",
+    "    #\"CHANGES\",\n",
+    "    # \"AMENDS\", \n",
+    "    \"REFERS_TO_SECTION\"\n",
     "]\n",
     "\n",
     "validation_schema = {\n",
-    "    \"Proposed_Rules\": [\"CHANGES\", \"AMENDS\"],\n",
+    "    # \"Proposed_Rules\": [\"CHANGES\", \"AMENDS\"],\n",
     "    \"Acts\": [\"REFERS_TO\"],\n",
     "    \"Sections\": [\"REFERS_TO\"],\n",
-    "    \"Amendments\": [\"REFERS_TO\", \"AMENDS\"],\n",
+    "    # \"Amendments\": [\"REFERS_TO\", \"AMENDS\"],\n",
     "}\n"
    ]
   },
@@ -424,9 +425,13 @@
     "# GraphRAG Database\n",
     "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor, SimpleLLMPathExtractor\n",
     "from rag_utils import create_neo4j_graph_store, create_neo4j_graphrag, neo4j_query\n",
+    "import random\n",
     "\n",
     "graph_idx_persist_dir = \"/workspace/data/graph_idx\"\n",
     "graph_store_persist_dir=\"/workspace/data/graph_store\"\n",
+    "\n",
+    "Settings.chunk_size = 500\n",
+    "Settings.chunk_overlap = 20\n",
     "\n",
     "# kg_extractor = SchemaLLMPathExtractor(\n",
     "#     llm=llm,\n",
@@ -435,21 +440,22 @@
     "#     kg_validation_schema=validation_schema,\n",
     "#     strict=False,  # if false, will allow triples outside of the schema``\n",
     "#     num_workers=6,\n",
-    "#     max_triplets_per_chunk=15,\n",
+    "#     max_triplets_per_chunk=10,\n",
     "# )\n",
     "\n",
-    "Settings.chunk_size = 500\n",
-    "Settings.chunk_overlap = 50\n",
+    "\n",
     "\n",
     "# extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to read each section and link mentions of other sections, rules, or acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) mentioned. If there are no mentions of other sections, rules, or acts, return an empty list.\"\n",
     "# extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to read each section and link other sections, rules, and acts mentioned. What sections, rules, and acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are mentioned in the content? If there are no mentions, return an empty list.\"\n",
-    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. What sections, rules, and acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are mentioned in the content? If there are no mentions, return an empty list.\"\n",
+    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to find semantic and literal relationships between the sections. If there are no relationships, return an empty list.\"\n",
     "kg_extractor = SimpleLLMPathExtractor(\n",
     "        extract_prompt=extract_prompt,\n",
     "        llm=llm,\n",
     "        max_paths_per_chunk=10,\n",
     "        num_workers=10,\n",
     "    )\n",
+    "\n",
+    "random.shuffle(documents)\n",
     "\n",
     "print(\"Creating graph store...\")\n",
     "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
@@ -487,23 +493,32 @@
     "    response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
     ")\n",
     "\n",
-    "# vector_index = create_llama_vector_index_rag(llm, rules_embed_model, documents=documents)\n",
-    "# query_engine = vector_index.as_query_engine(\n",
-    "#     similarity_top_k=5,\n",
-    "#     # node_postprocessors=[\n",
-    "#     #     LLMRerank(\n",
-    "#     #         choice_batch_size=5,\n",
-    "#     #         top_n=2,\n",
-    "#     #     )\n",
-    "#     # ],\n",
-    "#     # see https://github.com/run-llama/llama_index/blob/f7c5ee5efbb6172e819f26d1705fcdf6114b11a3/llama-index-core/llama_index/core/response_synthesizers/type.py#L4\n",
-    "#     response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
-    "# )"
+    "rules_vector_index = create_llama_vector_index_rag(llm, rules_embed_model, documents=documents)\n",
+    "graph_index = rules_vector_index.as_query_engine(\n",
+    "    similarity_top_k=3,\n",
+    "    # node_postprocessors=[\n",
+    "    #     LLMRerank(\n",
+    "    #         choice_batch_size=5,\n",
+    "    #         top_n=2,\n",
+    "    #     )\n",
+    "    # ],\n",
+    "    # see https://github.com/run-llama/llama_index/blob/f7c5ee5efbb6172e819f26d1705fcdf6114b11a3/llama-index-core/llama_index/core/response_synthesizers/type.py#L4\n",
+    "    response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = query_engine.query(\"Give a summary of the entire proposed rule. What are the key points?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +527,7 @@
     "graph_engine_tools = QueryEngineTool(\n",
     "            query_engine=graph_index,\n",
     "            metadata=ToolMetadata(\n",
-    "                name=\"sec_tool\",\n",
+    "                name=\"sec_title_17_chapter_ii_tool\",\n",
     "                description=(\n",
     "                    \"Contains all the current sections, rules, and relationships of SEC Title 17 Chapter II.\"\n",
     "                ),\n",
@@ -522,9 +537,9 @@
     "query_engine_tools = QueryEngineTool(\n",
     "            query_engine=query_engine,\n",
     "            metadata=ToolMetadata(\n",
-    "                name=\"rule_proposal_tool\",\n",
+    "                name=\"new_rule_proposal_tool\",\n",
     "                description=(\n",
-    "                    \"Contains all the information about the newly proposed financial rule.\"\n",
+    "                    \"Contains all the information about the newly proposed SEC rule.\"\n",
     "                ),\n",
     "            ),\n",
     "        )\n"
@@ -532,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
