--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -494,7 +494,7 @@
     "# )\n",
     "graph_index = PropertyGraphIndex.from_documents(documents[:20], \n",
     "                                                llm=llm,\n",
-    "                                                vector_store=Neo4jVectorStore('neo4j', os.getenv(\"NEO4J_PWD\"), \"bolt://localhost:7687\", embedding_dimension=1024),\n",
+    "                                                vector_store=Neo4jVectorStore('neo4j', os.getenv(\"NEO4J_PWD\"), \"bolt://localhost:7687\", embedding_dimension=1024, hybrid_search=True),\n",
     "                                                property_graph_store=graph_store, \n",
     "                                                embed_model=rules_embed_model, \n",
     "                                                kg_extractors=[kg_extractor],\n",
@@ -509,13 +509,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from rag_utils import create_neo4j_graph_store, create_neo4j_graphrag, neo4j_query\n",
+    "neo4j_query(graph_store, query=\"\"\"DROP DATABASE name IF EXISTS\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import StorageContext, VectorStoreIndex, PropertyGraphIndex\n",
+    "from rag_utils import create_llama_vector_index_rag\n",
+    "from llama_index.vector_stores.neo4jvector import Neo4jVectorStore\n",
+    "\n",
+    "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor, SimpleLLMPathExtractor\n",
+    "from rag_utils import create_neo4j_graph_store, create_neo4j_graphrag, neo4j_query\n",
+    "import random\n",
+    "\n",
+    "graph_idx_persist_dir = \"/workspace/data/compliance/graph_idx_test\"\n",
+    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to find semantic and literal relationships between the sections. If there are no relationships, return an empty list.\"\n",
+    "\n",
+    "kg_extractor = SimpleLLMPathExtractor(\n",
+    "        extract_prompt=extract_prompt,\n",
+    "        llm=llm,\n",
+    "        max_paths_per_chunk=10,\n",
+    "        num_workers=10,\n",
+    "    )\n",
+    "\n",
     "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
     "                                       password=os.getenv(\"NEO4J_PWD\"), \n",
     "                                       config={\"connection_timeout\": 1000, \"connection_acquisition_timeout\": 1000, \"max_connection_pool_size\": 1000})\n",
     "\n",
     "graph_index=PropertyGraphIndex.from_existing(property_graph_store=graph_store,\n",
     "                                 llm=llm,\n",
-    "                                 vector_store=Neo4jVectorStore('neo4j', os.getenv(\"NEO4J_PWD\"), \"bolt://localhost:7687\", embedding_dimension=1024),\n",
+    "                                 vector_store=Neo4jVectorStore('neo4j', os.getenv(\"NEO4J_PWD\"), \"bolt://localhost:7687\", embedding_dimension=1024, hybrid_search=True),\n",
     "                                 kg_extractor=[ kg_extractor ], \n",
     "                                 embed_kg_nodes=True,\n",
     "                                 embed_model=rules_embed_model,\n",
