prep for real deal

--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
     "access_token = os.getenv('HF_TOKEN')\n",
     "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
     "\n",
-    "graph_idx_persist_dir = \"/workspace/data/compliance/graph_idx_test30\"\n",
+    "graph_idx_persist_dir = \"/workspace/data/compliance/graph_idx_testfull\"\n",
     "graph_store_persist_dir= None #\"/workspace/data/graph_store\"\n",
     "\n",
     "Settings.chunk_size = 500\n",
@@ -444,12 +444,12 @@
     "\n",
     "# extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to read each section and link mentions of other sections, rules, or acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) mentioned. If there are no mentions of other sections, rules, or acts, return an empty list.\"\n",
     "# extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to read each section and link other sections, rules, and acts mentioned. What sections, rules, and acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are mentioned in the content? If there are no mentions, return an empty list.\"\n",
-    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to find semantic and literal relationships between the sections. If there are no relationships, return an empty list.\"\n",
+    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to find semantic, literal, and referential relationships between the sections. If there are no relationships, return an empty list.\"\n",
     "kg_extractor = SimpleLLMPathExtractor(\n",
     "        extract_prompt=extract_prompt,\n",
     "        llm=llm,\n",
     "        max_paths_per_chunk=10,\n",
-    "        num_workers=10,\n",
+    "        num_workers=4,\n",
     "    )\n",
     "\n",
     "random.shuffle(documents)\n",
@@ -459,31 +459,19 @@
     "                                       password=os.getenv(\"NEO4J_PWD\"), \n",
     "                                       config={\"connection_timeout\": 1000, \"connection_acquisition_timeout\": 1000, \"max_connection_pool_size\": 1000})\n",
     "\n",
-    "# if not os.path.exists(graph_idx_persist_dir):\n",
-    "#     print(\"Deleting all nodes and relationships...\")\n",
-    "#     neo4j_query(graph_store, query=\"\"\"MATCH n=() DETACH DELETE n\"\"\")\n",
+    "if not os.path.exists(graph_idx_persist_dir):\n",
+    "    print(\"Deleting all nodes and relationships...\")\n",
+    "    neo4j_query(graph_store, query=\"\"\"MATCH n=() DETACH DELETE n\"\"\")\n",
     "\n",
     "print(\"Creating graphrag index...\")\n",
-    "graph_index = create_neo4j_graphrag(documents[:30], llm, rules_embed_model, kg_extractor, graph_store, graph_idx_persist_dir=graph_idx_persist_dir, graph_store_persist_dir=graph_store_persist_dir, similarity_top_k=3)\n",
+    "graph_index = create_neo4j_graphrag(documents, llm, rules_embed_model, kg_extractor, graph_store, graph_idx_persist_dir=graph_idx_persist_dir, graph_store_persist_dir=graph_store_persist_dir, similarity_top_k=5)\n",
     "\n",
     "dump_neo4j_database('neo4j', '/workspace/data/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import subprocess\n",
-    "\n",
-    "\n",
-    "# Example usage\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,21 +598,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "chaty=graph_index.as_chat_engine()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "chaty."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
