--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,6 +377,7 @@
     "entities = Literal[#\"PROPOSED_RULE\", \n",
     "                   \"ACTS\",\n",
     "                   \"SECTIONS\",\n",
+    "                   \"RULES\"\n",
     "                   #\"AMENDMENTS\"\n",
     "]\n",
     "\n",
@@ -391,6 +392,7 @@
     "    # \"Proposed_Rules\": [\"CHANGES\", \"AMENDS\"],\n",
     "    \"Acts\": [\"MENTIONS\",\"REFERS_TO\"],\n",
     "    \"Sections\": [\"MENTIONS\",\"REFERS_TO\"],\n",
+    "    \"Rules\": [\"MENTIONS\",\"REFERS_TO\"],\n",
     "    # \"Amendments\": [\"REFERS_TO\", \"AMENDS\"],\n",
     "}\n"
    ]
@@ -403,7 +405,7 @@
    "source": [
     "from rag_utils import set_neo4j_password, add_lines_to_conf\n",
     "set_neo4j_password('bewaretheneo')\n",
-    "add_lines_to_conf()\n",
+    "# add_lines_to_conf()\n",
     "\n",
     "###### START NEO4J SERVER ######\n"
    ]
